--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,15 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
+node_modules
 /.pnp
 .pnp.js
 
 # testing
 /coverage
+
+# fake data
+db.json
 
 # production
 /build
@@ -21,6 +24,9 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# editors
+.vscode
 
 # tailwind
 output.css
