--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,7 @@
   "name": "client",
   "private": true,
   "version": "1.0.0",
+  "homepage": "http://danigb.github.io/react-mb",
   "dependencies": {
     "@types/react-router-dom": "^5.1.5",
     "ky": "^0.20.0",
@@ -19,6 +20,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build",
     "css:dev": "postcss src/styles/index.css -o src/styles/output.css",
     "css:watch": "postcss src/styles/index.css -o src/styles/output.css -w",
     "css:prod": "postcss src/styles/index.css -o src/styles/output.css --env production"
@@ -49,6 +51,7 @@
     "@types/react-dom": "^16.9.0",
     "autoprefixer": "^9.8.0",
     "cssnano": "^4.1.10",
+    "gh-pages": "^2.2.0",
     "json-server": "^0.16.1",
     "postcss-cli": "^7.1.1",
     "postcss-import": "^12.0.1",
